deploy/deploy-live.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developers-live
spec:
  replicas: 2
  selector:
    matchLabels:
      app: developers-live
  template:
    metadata:
      labels:
        app: developers-live
    spec:
      containers:
        - name: developers-live
          image: startdreamteam/developers-live-test
