deploy/deploy-member.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developers-member
spec:
  replicas: 2
  selector:
    matchLabels:
      app: developers-member
  template:
    metadata:
      labels:
        app: developers-member
    spec:
      containers:
        - name: developers-member
          image: startdreamteam/developers-member-test:45
