deploy/service-member.yml
apiVersion: v1
kind: Service
metadata:
  name: developers-member-svc
spec:
  selector:
    app: developers-member
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
