deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: spring
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
