deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: developers-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: diveloper.site
      http:
        paths:
          - path: /member
            pathType: Prefix
            backend:
              service:
                name: developers-member-svc
                port:
                  number: 80
